# choices

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  logger.py  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0348b44ff5b7_initial_tables.py
app/: main.py
app/db/: client.py  models.py
app/db/seed/: local_dummy.py
app/middleware/: log_request.py
app/routes/answer/: models.py  routes.py
app/routes/ask/: models.py  routes.py
app/routes/welcome/: models.py  routes.py
app/services/: answers.py  questions.py  visitors.py
app/static/: style.css
app/templates/: base.html
app/templates/answer/: index.html
app/templates/ask/: index.html
app/templates/welcome/: index.html
