[project]
name = "choices"
version = "0.1.0"
description = "choices"
authors = [
    {name = "samnaden"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.29.0",
    "jinja2==3.1.3",
    "sqlalchemy==2.0.30",
    "psycopg[binary]==3.1.18",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bleach (>=6.2.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
exclude = ["alembic"]

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
isort = "5.13.2"
mypy = "1.10.0"
pre-commit = "^4.2.0"
types-bleach = "^6.2.0.20250514"
alembic = "^1.16.1"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
